<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SplashActivity!</string>
    <string name="app_name">Half My Age Plus 7</string>
    <string name="go_button">Calculate</string>
    <string name="lower">Your lower limit is:</string>
    <string name="upper">Your upper limit is:</string>
    <string name="enter_age">Enter your age:</string>
    
    <color name="white">#FFFFFF</color>
    <color name="lightpurple">#8C006C</color>
    <color name="darkpurple">#4F003A</color>

</resources>