<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
		<LinearLayout
			android:id="@+id/topcontrolbar"
			android:layout_width="fill_parent"
			android:layout_height="50dip"
			android:layout_alignParentTop="true"
			android:background="@drawable/main_header_selector"
			>
			   <TextView
				android:id="@+id/maintitle"
			   	android:text="@string/app_name"
			   	android:layout_width="wrap_content"
			   	android:layout_height="wrap_content"
			   	android:layout_marginTop="8dp"
			   	android:layout_marginLeft="8dp"
			   	android:shadowColor="#000000"
			   	android:shadowDx="1"			   	
			   	android:shadowDy="1"
			   	android:shadowRadius="2"
			   />
		</LinearLayout>
    
		<ScrollView android:id="@+id/ScrollView02"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_below="@id/topcontrolbar"
			android:background="@color/white" >
			   
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			    android:id="@+id/bodylayout"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:background="@color/white" >
			
			    <TextView
			        android:id="@+id/lower_limit"
			        android:layout_width="250dp"
			        android:layout_height="wrap_content"
			        android:text="@string/lower"		        
				   	android:layout_marginTop="35dp"
			        android:layout_gravity="center"
			        android:gravity="center"/>
			    
			    <TextText
			        android:id="@+id/lower_val"
			        android:layout_width="150dp"
			        android:layout_height="wrap_content"      
				   	android:layout_marginTop="15dp"
				   	android:layout_gravity="center"
				   	android:gravity="center" />
			    
			    <TextView
			        android:id="@+id/upper_limit"
			        android:layout_width="250dp"
			        android:layout_height="wrap_content"
			        android:text="@string/upper"		        
				   	android:layout_marginTop="50dp"
			        android:layout_gravity="center"
			        android:gravity="center"/>
			    
			    <TextText
			        android:id="@+id/upper_val"
			        android:layout_width="150dp"
			        android:layout_height="wrap_content"      
				   	android:layout_marginTop="15dp"
				   	android:layout_gravity="center"
				   	android:gravity="center" />
			
			</LinearLayout>
		</ScrollView>
		
</RelativeLayout>